[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_PanelHeader.png" type="Texture" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_PanelRightBorder.png" type="Texture" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_PanelMiddleBackground.png" type="Texture" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_PanelLeftBorder.png" type="Texture" id=5]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_PanelTopBorder.png" type="Texture" id=6]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_GUI/Red_PactSinglePanel.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Red_PactSinglePanel" type="MarginContainer"]
margin_right = 300.0
margin_bottom = 306.0
rect_min_size = Vector2( 275, 0 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 306.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HeaderMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_left = 50.0
margin_right = 250.0
margin_bottom = 28.0
size_flags_horizontal = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderBackground" type="TextureRect" parent="VBoxContainer/HeaderMarginer"]
margin_right = 200.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderMarginer"]
margin_right = 200.0
margin_bottom = 28.0
mouse_filter = 2
custom_constants/margin_right = 15
custom_constants/margin_top = 3
custom_constants/margin_left = 15
custom_constants/margin_bottom = 1

[node name="HeaderLabel" type="Label" parent="VBoxContainer/HeaderMarginer/MarginContainer"]
margin_left = 50.0
margin_top = 6.0
margin_right = 149.0
margin_bottom = 23.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Sample Text"

[node name="Border" type="TextureRect" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 6 )
stretch_mode = 2

[node name="Border3" type="TextureRect" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 300.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 6 )
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 300.0
margin_bottom = 304.0
mouse_filter = 2
size_flags_vertical = 3

[node name="LeftBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 272.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="BodyMarginer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 292.0
margin_bottom = 272.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BodyBackground" type="TextureRect" parent="VBoxContainer/HBoxContainer/BodyMarginer"]
margin_right = 284.0
margin_bottom = 272.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/BodyMarginer"]
margin_left = 138.0
margin_right = 146.0
margin_bottom = 272.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="PactCardContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/BodyMarginer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 264 )
mouse_filter = 2
custom_constants/separation = 6

[node name="RightBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 296.0
margin_right = 300.0
margin_bottom = 272.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Border2" type="TextureRect" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 300.0
margin_bottom = 306.0
mouse_filter = 2
texture = ExtResource( 6 )
stretch_mode = 2
